--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-#version: '3.8'
-
 services:
   barlog:
     build:
@@ -7,4 +5,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    env_file: .env
+    networks:
+      - microservices_network
+
+networks:
+  microservices_network:
+    external: true
 
